# energy-usage-anomaly-detection-assistant

./: .env_template  .gitignore  Dockerfile  README.md  app.py  basic_chatbot.ipynb  basic_chatbot.py  exploration.ipynb  pyproject.toml  requirements.txt  requirements_dev.txt
.github/workflows/: deploy.yml
deployment/: deploy.sh  setup_env.sh
notebooks/: basic_chatbot.ipynb  exploration.ipynb  smart_meter_data_generation.ipynb
src/: app.py  basic_chatbot.py  chatbot_basic.py  chatbot_rag.py  chatbot_rag_anomaly_detection.py  example_customer_documents.json  smart_meter_data.csv  utils.py  weather_data.csv
